# Web-push-application

./: .dockerignore  .gitignore  README.md  openapi.yaml
backend/: Cargo.toml
backend/migrations/: 20260606000001_init_clients.sql  20260606000002_init_subscriptions.sql
backend/src/: config.rs  error.rs  main.rs  utils.rs
backend/src/entities/: admin.rs  client.rs  mod.rs  send.rs  subscription.rs
backend/src/push/: crypto.rs  mod.rs  sender.rs  vapid.rs
backend/src/routes/: auth.rs  clients.rs  mod.rs  send.rs  subscriptions.rs
docker/: .env.example  docker-compose.yaml
docker/backend/: Dockerfile
docker/frontend/: Caddyfile  Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  push.conf
examples/: app.js  index.html  server.py  server_with_client.py  style.css  sw.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css
frontend/src/components/: ApiKeyReveal.jsx  ConfirmModal.jsx  CopyableValue.jsx  CreateClientModal.jsx  Layout.jsx  Modal.jsx  Pagination.jsx  RegenerateApiKeyModal.jsx
frontend/src/pages/: ClientSubscriptionsPage.jsx  ClientsPage.jsx  LoginPage.jsx
