[package]
name = "push-platform"
version = "0.1.0"
edition = "2024"
description = "Web push platform (RFC 8030)"
authors = ["fanix.ban@gmail.com"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-extra = { version = "0.9", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
web-push = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
tower = { version = "0.4" }
